Pass true JWT and compare hashed password

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 	    <p class="lead">RMU IT Help Desk<br> 412-397-2211<br> help@rmu.edu</p>
 	  </div>
 
-
+      <div class="feedback"></div>
      	<div class="content">
 		   
 
