--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     <!-- Custom styles for this project -->
     <link href="style.css" rel="stylesheet">
 
+    <link rel="shortcut icon" href="favicon.ico" /> 
+
 </head>
 <body>
 
